[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
features = ["json"]

[dependencies]
async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }

[dependencies.sea-orm]
version = "^0.4.0"
features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"]
default-features = false

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[features]
default = ["sqlx-postgres"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]